# gaussian-process-regression-app

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
api/: Dockerfile  pyproject.toml
api/src/: main.py
api/src/configuration/: const.py
api/src/controller/: ml.py
api/src/dependency/: injection.py
api/src/model/: __init__.py  base.py  ml.py
api/src/repository/: mysql.py
api/src/schema/controller/: ml.py
api/src/schema/repository/: mysql.py
api/src/schema/service/: ml.py
api/src/service/: ml.py
db/data/: aria_log_control  ib_buffer_pool
db/data/db/: alembic_version.frm  alembic_version.ibd  predicted_data.frm  test.frm
db/data/mysql/: innodb_index_stats.ibd  innodb_table_stats.ibd
envfiles/: .web.sample
migration/: Dockerfile  pyproject.toml
migration/alembic/: env.py
migration/alembic/versions/: 2023_04_04_2352-9ec7bca53aa3_create_table.py
openapi/: compiled.yaml  index.yaml
openapi/api/: api.ts  base.ts  configuration.ts  index.ts
openapi/components/schemas/: index.yaml
openapi/components/schemas/ml/: getPredictionResponse.yaml
openapi/paths/: index.yaml
openapi/paths/ml/: getPrediction.yaml
web/: package-lock.json  package.json
web/api/: axios.ts  index.ts
web/app/: LoginButton.tsx  page.tsx
web/app/api/auth/[...nextauth]/: route.ts
web/app/userpage/: LogoutButton.tsx  ProvidersWrapper.tsx  layout.tsx  page.tsx
