[tool.poetry]
name = "gaussian-process-regression-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
requests = "^2.31.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
fastapi = "^0.103.1"
orjson = "^3.9.5"
python-multipart = "^0.0.6"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
black = "^23.9.1"
pymysql = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "ALL", 
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from err
    "D205", # to simplify comment for func
    "D212", # to simplify comment for func
    "D400", # to simplify comment for func
    "D415", # to simplify comment for func
]
fixable = ["ALL"]
target-version = "py39"

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]