[tool.poetry]
name = "gaussian-process-regression-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
requests = "^2.31.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
fastapi = "^0.103.1"
orjson = "^3.9.5"
python-multipart = "^0.0.6"
pymysql = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
